@@ -49,7 +49,7 @@ if [ "x$TRUST_USE_EXTERNAL_MED" = "x" ]; then
   export CFLAGS CPPFLAGS
 
   # Options: no Python, static libraries and path to HDF5 
-  options="--enable-static --disable-python --enable-installtest --with-hdf5=$TRUST_MED_ROOT --enable-parallel"  # TRUST_MED_ROOT is also HDF5 root ...
+  options="--enable-static --disable-python --enable-installtest --with-hdf5=$TRUST_MED_ROOT"  # TRUST_MED_ROOT is also HDF5 root ...
   env CC=$MPI_ROOT/bin/mpicc CXX=$MPI_ROOT/bin/mpicxx F77=$MPI_ROOT/bin/mpif77 ./configure --prefix="$actual_install_dir" $options #   For debug, add:   CFLAGS="-g -O0" CXXFLAGS="-g -O0"
   
   $TRUST_MAKE  || exit -1
