@@ -1,6 +1,8 @@
 -------------------------------------------------------------------------------------------------------
 Release notes version 1.8.1_beta : Enhancements, modifications and corrected bugs since version 1.8.0 :
 -------------------------------------------------------------------------------------------------------
+XX/XX/20 (TRUST)  New keyword : Add single_hdf option for backup/restart keywords Sauvegarde/Reprise to use a single .sauv file thanks to HDF parallel I/O
+XX/XX/20 (TRUST)  New keyword : Add single_hdf option for Partition keyword to create a single "zones_name_pN.Zone" file instead of N "zones_name_*.Zones" files thanks to HDF parallel I/O
 25/02/20 (TRUST)  Bug fixed   : Total pressure in VEF Quasi-Compressible model was not computed correctly
 21/02/20 (TRUST)  Bug fixed   : Rewrite Champ_Fonc_MED class for a faster Champ_Fonc_MED_tabule keyword (read of several time steps in a MED file for field time-tabulation)
 29/01/20 (TRUST)  New feature : New option thermique_monolithique (VDF only) for Scheme_Euler_Implicit keyword to enable full thermal impliciting for coupled problems (single matrix solved)
